# RaftPPI

./: .gitignore  README.md  pyproject.toml
configs/: data.yaml  main.yaml
src/: train_raft.py
src/raft/: data.py  model.py  proteome_rff_retrieval.py
src/utils/: __init__.py  config.py  distributed.py  experiment.py  log.py
